Change reveal height and width to fix overflow problem

--- a/app/assets/stylesheets/recipe_cards.scss
+++ b/app/assets/stylesheets/recipe_cards.scss
@@ -61,7 +61,8 @@ ul.list-group{
 
 @media only screen and (max-width: 870px) {
   div.reveal {
-    position: unset;
+    height: 100vh;
+    width: 100vw;
   }
 }
 
